# Chess

./: CMakeLists.txt  CMakeUserPresets.json
Chess/: AssetManager.cpp  AssetManager.h  CMakeLists.txt  Chess.cpp  Chess.h  GameManager.cpp  GameManager.h  Tile.cpp  Tile.h
Chess/Figurines/: Bishop.cpp  Bishop.h  CMakeLists.txt  Figure.cpp  Figure.h  Figurine.cpp  Figurine.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
Chess/Menu/: MenuItem.h
